implemented reset button to clear canvas

--- a/frontend/javascript/web/creator.html
+++ b/frontend/javascript/web/creator.html
@@ -3,7 +3,7 @@
 
 <head>
   <title> Data Creator</title>
-  <link rel="stylesheet" href="styles.css" />
+  <link rel="stylesheet"  type="text/css" href="styles.css">
 </head>
 
 <body>
@@ -17,10 +17,6 @@
   <script src="js/draw.js"></script>
   <script src="js/reset.js"></script>
 
-  <script>
-    const rButton =
-      new resetButton(resetButton);
-  </script>
   <script>
     const sketchPad =
       new SketchPad(sketchPadContainer);
