samles neatly ordered

--- a/frontend/javascript/web/viewer.html
+++ b/frontend/javascript/web/viewer.html
@@ -3,7 +3,7 @@
  <head>
   <meta charset="UTF-8">
     <title>Data Viewer</title>
-    <link rel="stylesheet" type="" href="styles.css"/>
+    <link rel="stylesheet" type="" href="../web/styles.css"/>
  </head> 
   <body>
     <h1>Data Viewer</h1>
