--- a/frontend/javascript/web/viewer.html
+++ b/frontend/javascript/web/viewer.html
@@ -1,28 +1,61 @@
 <!DOCTYPE html>
 <html>
- <head>
+
+<head>
   <meta charset="UTF-8">
-    <title>Data Viewer</title>
-    <link rel="stylesheet" type="" href="../web/styles.css"/>
- </head> 
-  <body>
-    <h1>Data Viewer</h1>
-    <div id="container"></div>
-    <script src="../common/js_objects/samples.js"></script>
-    <script src="../common/constants.js"></script>
-    <script src="../common/utils.js"></script>
-    <script src="js/display.js"></script>
+  <title>Data Viewer</title>
+  <link rel="stylesheet" type="" href="../web/styles.css" />
+</head>
 
-    <script>
-    const groups=utils.groupBy(samples,"user_id");
+<body>
+  <h1>Data Viewer</h1>
+  <div id="inputContainer">
+    <button id="undoButton">↩</button>
+    <button id="resetButton">🔁</button>
+    <button id="redoButton">↪</button>
+</div>
+  <div id="chartContainer"></div>
+  <div id="container"></div>
+  <script src="../common/js_objects/features.js"></script>
+  <script src="../common/constants.js"></script>
+  <script src="../common/utils.js"></script>
+  <script src="../common/draw.js"></script>
+  <script src="js/display.js"></script>
+  <script src="js/sketchPad.js"></script>
+  <script src="js/buttons.js"></script>
+  <script defer async="false" src="https://www.google.com/jsapi"></script>
+    <script src="./chart/graphics.js"></script>
+    <script src="./chart/math.js"></script>
+    <script src="./chart/chart.js"></script>
 
-    for(let user_id in groups){
-      const samples=groups[user_id];
-      const userName=samples[0].user_name;
+  <script>
+    const {samples, featureNames} = features;
+    const groups = utils.groupBy(samples, "user_id");
+
+    for (let user_id in groups) {
+      const samples = groups[user_id];
+      const userName = samples[0].user_name;
       console.log(userName);
-      createRow(container,userName,samples);
+      createRow(container, userName, samples);
     }
-    </script>
-  </body>
-</html>
+    const options = {
+      size:400,
+      axesLabels:featureNames,
+      styles:utils.styles,
+      transparency:0.7,
+      icon:"image"
+    };
+    graphics.generateImages(utils.styles);
 
+    const chart=new Chart(
+      chartContainer,
+      samples,
+      options,
+      handleClick
+    );
+    const sketchPad=
+      new SketchPad(inputContainer);
+  </script>
+</body>
+
+</html>
