--- a/frontend/javascript/web/viewer.html
+++ b/frontend/javascript/web/viewer.html
@@ -18,6 +18,7 @@
   <div id="chartContainer"></div>
   <div id="container"></div>
   <script src="../common/js_objects/features.js"></script>
+  <script src="../common/js_objects/minMax.js"></script>
   <script src="../common/constants.js"></script>
   <script src="../common/utils.js"></script>
   <script src="../common/featureFunctions.js"></script>
@@ -33,6 +34,7 @@
   <script>
     const {samples, featureNames} = features;
     const groups = utils.groupBy(samples, "user_id");
+    const {min,max} = minMax;
 
     for (let user_id in groups) {
       const samples = groups[user_id];
@@ -59,8 +61,11 @@
 
     function onDrawingUpdate(paths) {
       const point = featureFunctions.inUse.map(f => f.function(paths));
+      for (let i=0;i<min.length;i++) {
+        point[i]/(max[i]-min[i])
+      }
       chart.showDynamicPoint(point);
-      const label = classify(point);
+      const label = classify(point,"near");
       if (paths.length == 0) {
         predictedLabelContainer.innerHTML = "DRAW";
       } else {
@@ -68,29 +73,30 @@
       }
 
     }
-    function classify(point) {
-      const samplePoints = samples.map(s => s.point);
-      const indexs = utils.getLocalGroup(point, samplePoints);
-      console.log(indexs);
-      let labels = []
-      for (let i = 0; i < indexs.length; i++) {
-        const idx = indexs[i];
-        console.log(samples[idx].label);
-        labels.push(samples[idx].label);
-        console.log(labels);
+    function classify(point, type = "near") {
+      if (type == "mode") {
+
+        const samplePoints = samples.map(s => s.point);
+        const indexs = utils.getLocalGroup(point, samplePoints);
+        console.log(indexs);
+        let labels = []
+        for (let i = 0; i < indexs.length; i++) {
+          const idx = indexs[i];
+          console.log(samples[idx].label);
+          labels.push(samples[idx].label);
+          console.log(labels);
+        }
+        const label = utils.getMode(labels);
+        return label;
+      } else if (type == "near") {
+
+        const samplePoints = samples.map(s => s.point);
+        const index = utils.getNearest(point, samplePoints);
+        const nearestSample = samples[index];
+        return nearestSample.label;
       }
-
-
-      const label = utils.getMode(labels);
-      return label;
-
     }
-    <!-- <!-1- function classify(point) { -1-> -->
-    <!-- < !--   const samplePoints = samples.map(s => s.point); -1-> -->
-    <!-- < !--   const index = utils.getNearest(point, samplePoints); -1-> -->
-    <!-- < !--   const nearestSample = samples[index]; -1-> -->
-    <!-- < !--   return nearestSample.label; -1-> -->
-    <!-- < !-- } -1-> -->
+
   </script>
 </body>
 
